# afyabima-platform

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  docker-compose.yml  pyproject.toml
data_generation/: README.md  __init__.py  config.py  exporter.py  generator.py  main.py  models.py  patterns.py  temporal.py
database_scripts/: 01_schema.sql  02_set_passwords.sh  03_stored_procedures.sql  README_db.md  db_tests.sql  load_csv.sh  stream_producer.py
docker/generator/: Dockerfile
docker/postgres/: Dockerfile
project_documentation/: AfyaBima_Project_Proposal.md
project_documentation/data_generation/: 01-config.md
project_documentation/database_scripts/: 01-schema.md  02-set-passwords.md  03-stored-procedures.md
