[project]
name = "afyabima-data-generation"
version = "0.1.0"
description = "Synthetic healthcare claims generator for the AfyaBima fraud detection platform"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "dbt-core>=1.11.6",
    "dbt-postgres>=1.10.0",
    "faker>=26.0.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
]

[project.scripts]
generate = "data_generation.main:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "pandas-stubs>=2.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["data_generation"]

# ---------------------------------------------------------------------------
# Ruff (linting + formatting, replaces flake8 + isort + black)
# ---------------------------------------------------------------------------

[tool.ruff]
target-version = "py311"
line-length = 110

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "G",   # flake8-logging-format (enforces % lazy logging)
    "LOG", # flake8-logging
]
ignore = [
    "B008",  # do not perform function calls in default arguments
]

[tool.ruff.lint.per-file-ignores]
"data_generation/main.py" = ["G004"]  # f-string in logger allowed in CLI output

# ---------------------------------------------------------------------------
# Mypy
# ---------------------------------------------------------------------------

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=data_generation --cov-report=term-missing"
